--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
-#Add your personal y position of the window and taskbarheight to the file "return {y = 0,taskbarHeight = 40}"
+#Add your personal y position of the window and taskbarheight
+#Filename:
+#personalwindow.lua
+#Contents:
+#return {y = 0,taskbarHeight = 40}
 personalwindow.lua
